force-app/main/default/objects/Product_Line__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to determine if this field should be available for use in the Product Line lookup fields.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>