force-app/main/default/objects/Product_Line__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <description>Field used to show what the deployment type of the Product Line is. This is used in the data warehouse.</description>
    <label>Deployment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>