force-app/main/default/objects/Product_Line__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Knowledge &amp; Content</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Leaders &amp; Professionals</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; BD</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>Operations &amp; Finance</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>OnePlace</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>