force-app/main/default/objects/Product_Line__c/fields/Simple_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Simple_Product_Line__c</fullName>
    <description>Field used to simplify the product line list for reporting purposes. This is used in the data warehouse.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>L&amp;P</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
            <value>
                <fullName>IIS</fullName>
            </value>
            <value>
                <fullName>Small Firms</fullName>
            </value>
            <value>
                <fullName>Nudges</fullName>
            </value>
            <value>
                <fullName>OPIS</fullName>
            </value>
            <value>
                <fullName>OnePlace</fullName>
            </value>
            <value>
                <fullName>OPMBD</fullName>
            </value>
            <value>
                <fullName>Data - Risk</fullName>
            </value>
            <value>
                <fullName>Data - MBD</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Content</fullName>
                <label>C&amp;C Other</label>
            </value>
            <value>
                <fullName>Billstream</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Workspaces</fullName>
            </value>
            <value>
                <fullName>Multiple Products – C&amp;C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>