force-app/main/default/objects/Product_Line__c/fields/TCSM__c.field-meta.xml
<CustomField>
    <fullName>TCSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>