force-app/main/default/objects/Product_Line__c/listViews/Active_Product_Lines1.listView-meta.xml
<ListView>
    <fullName>Active_Product_Lines1</fullName>
    <columns>Practice__c</columns>
    <columns>Simple_Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>IMP_prefix__c</columns>
    <columns>Deployment__c</columns>
    <columns>Cloud_Addendum_Required__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Product Lines</label>
    <language>en_US</language>
</ListView>