force-app/main/default/objects/Product_Line__c/listViews/Multiple_Products_product_lines.listView-meta.xml
<ListView>
    <fullName>Multiple_Products_product_lines</fullName>
    <columns>NAME</columns>
    <columns>Simple_Product_Line__c</columns>
    <columns>Practice__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Multiple Products</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Multiple Products product lines</label>
</ListView>